# game-of-life-parsers

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: default_game_descriptor.rs  game_descriptor.rs  lib.rs  stringreader.rs
src/parsers/: life_1_05_parser.rs  life_1_06_parser.rs  mod.rs
tests/: test_life_1_05.rs  test_life_1_06.rs
tests/life_1_05/: glider.life
tests/life_1_06/: test_1_06.life
