[package]
name = "game-of-life-parsers"
version = "0.1.0"
authors = ["René Perschon <rene.perschon@payu.com>"]
description = "Collection of parsers for Conway's game of life."
documentation = "https://docs.rs/game_of_life_parsers/"
homepage = "https://github.com/Leopard2A5/game-of-life-parsers"
readme = "README.md"
keywords = ["conway", "game-of-life", "parser", "game"]
license = "MIT"

[badges]
travis-ci = { repository = "Leopard2A5/game-of-life-parsers", branch = "master" }

[dependencies]
error-chain = "0.11.0"
regex = "0.2.2"
